# aw-import-screentime

./: .gitignore  README.md  pyproject.toml
src/aw_import_screentime/: __main__.py  app_in_focus_extended_pb2.pyi  ccl_segb_cli.py
tests/: test_activitywatch_sink.py  test_watch_state.py  test_watcher_runtime.py
