[project]
name = "aw-import-screentime"
version = "0.1.0"
description = ""
authors = [{ name = "Erik Bjäreholt", email = "erik@bjareho.lt" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aw-core",
    "aw-client",
]

[dependency-groups]
dev = [
    "black",
    "pytest>=6.2.3,<7",
    "mypy",
]

[project.scripts]
aw-import-screentime = "aw_import_screentime.__main__:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"


